--- a/Endmer/Endmer.csproj
+++ b/Endmer/Endmer.csproj
@@ -570,6 +570,7 @@
     <Content Include="Views\Zimmetler\Index.cshtml" />
     <Content Include="Views\Urunler\ZimmetSahipleri.cshtml" />
     <Content Include="Views\Zimmetler\ZimmetVer.cshtml" />
+    <Content Include="Views\Personel\PersonelZimmet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
