--- a/Endmer/Endmer.csproj
+++ b/Endmer/Endmer.csproj
@@ -183,6 +183,9 @@
     <Compile Include="Models\Entity\Tbl_Urunler.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entity\Tbl_ZimmetAktar.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Entity\Tbl_Zimmetler.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -571,6 +574,7 @@
     <Content Include="Views\Urunler\ZimmetSahipleri.cshtml" />
     <Content Include="Views\Zimmetler\ZimmetVer.cshtml" />
     <Content Include="Views\Personel\PersonelZimmet.cshtml" />
+    <Content Include="Views\Zimmetlerim\Aktar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
