--- a/Endmer/Endmer.csproj
+++ b/Endmer/Endmer.csproj
@@ -139,9 +139,11 @@
     <Compile Include="Controllers\AraclarController.cs" />
     <Compile Include="Controllers\DepartmanlarController.cs" />
     <Compile Include="Controllers\KategorilerController.cs" />
+    <Compile Include="Controllers\KonumlarController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\OnaylarController.cs" />
     <Compile Include="Controllers\PersonelController.cs" />
+    <Compile Include="Controllers\ProfilController.cs" />
     <Compile Include="Controllers\UrunlerController.cs" />
     <Compile Include="Controllers\ZimmetlerController.cs" />
     <Compile Include="Controllers\ZimmetlerimController.cs" />
@@ -581,6 +583,10 @@
     <Content Include="Views\Urunler\UrunGuncelle.cshtml" />
     <Content Include="Views\Zimmetler\Guncelle.cshtml" />
     <Content Include="Views\Zimmetlerim\Guncelle.cshtml" />
+    <Content Include="Views\Profil\Index.cshtml" />
+    <Content Include="Views\Konumlar\Index.cshtml" />
+    <Content Include="Views\Konumlar\KonumEkle.cshtml" />
+    <Content Include="Views\Konumlar\KonumGuncelle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
