--- a/Endmer/Web.config
+++ b/Endmer/Web.config
@@ -16,6 +16,8 @@
 	</appSettings>
 	<system.web>
 
+		<sessionState timeout="60"></sessionState>
+		
 		<customErrors mode="Off">
 			<error statusCode="404" redirect="/Hata/Hata404" />
 		</customErrors>
@@ -24,7 +26,7 @@
 		<httpRuntime targetFramework="4.7.2" />
 
 		<authentication mode="Forms">
-			<forms loginUrl="/Login/Index" timeout="10"></forms>
+			<forms loginUrl="/Login/Index" timeout="60"></forms>
 		</authentication>
 
 		<roleManager enabled="true" defaultProvider="testRoleProvider">
