--- a/Endmer/Endmer.csproj
+++ b/Endmer/Endmer.csproj
@@ -169,6 +169,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AnaSayfaController.cs" />
     <Compile Include="Controllers\AraclarController.cs" />
+    <Compile Include="Controllers\AraclarimController.cs" />
     <Compile Include="Controllers\DepartmanlarController.cs" />
     <Compile Include="Controllers\HataController.cs" />
     <Compile Include="Controllers\KategorilerController.cs" />
@@ -648,6 +649,8 @@
     <Content Include="Views\Araclar\Yazdir.cshtml" />
     <Content Include="Views\Araclar\GecmisYazdir.cshtml" />
     <Content Include="Views\Zimmetler\Yazdir.cshtml" />
+    <Content Include="Views\Araclarim\Index.cshtml" />
+    <Content Include="Views\Araclarim\Guncelle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
