--- a/Endmer/Endmer.csproj
+++ b/Endmer/Endmer.csproj
@@ -227,6 +227,9 @@
     <Compile Include="Models\Entity\Tbl_Personel.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entity\Tbl_UrunGecmis.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Entity\Tbl_Urunler.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -644,7 +647,6 @@
     <Content Include="Views\Urunler\Yazdir.cshtml" />
     <Content Include="Views\Araclar\BakimZamani.cshtml" />
     <Content Include="Views\Araclar\BakimEkle.cshtml" />
-    <Content Include="Views\Araclar\Yazdir.cshtml" />
     <Content Include="Views\Araclar\GecmisYazdir.cshtml" />
     <Content Include="Views\Zimmetler\Yazdir.cshtml" />
     <Content Include="Views\Araclarim\Index.cshtml" />
@@ -653,9 +655,16 @@
     <Content Include="Views\Dokumantasyon\Yazi.cshtml" />
     <Content Include="Views\Dokumantasyon\DokumanDetay.cshtml" />
     <Content Include="Views\Konumlar\Urunler.cshtml" />
+    <Content Include="Views\Araclar\Yazdir.cshtml" />
+    <Content Include="Views\Urunler\UrunGecmisi.cshtml" />
+    <Content Include="Views\Personel\Yazdir.cshtml" />
+    <Content Include="Views\Departmanlar\Yazdir.cshtml" />
+    <Content Include="Views\Konumlar\Yazdir.cshtml" />
+    <Content Include="Views\Kategoriler\Yazdir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Scripts\DataTable\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
